  * Minor incompatible change: COMPILE-FILE-PATHNAME now merges its
    OUTPUT-FILE argument with its INPUT-FILE argument, resulting in
    behaviour analogous to RENAME-FILE.  This puts its behaviour more
    in line with ANSI's wording on COMPILE-FILE-PATHNAME. (thanks to
    Marco Antinotti)
  * The fasl file version number has changed again. (because of the
    bug fix involving the names of PCL MAKE-INSTANCE functions)

changes in sbcl-0.7.8 relative to sbcl-0.7.7:
  * A beta-quality port to the mips architecture running Linux,
    based on the old CMUCL backend, has been made.  It has been tested
    on a big-endian kernel, and works sufficiently well to be able to
    rebuild itself; it has not been tested in little-endian mode.
  * fixed bug 120a: The compiler now deals correctly with IFs where
    the consequent is the same as the alternative, instead of
    misderiving the return type. (thanks to Alexey Dejneka)
  * fixed bug 113: Logical pathnames are now dumpable (the logical
    host is resolved at load-time, throwing an error if it is not
    found).
  * fixed bug 174: FORMAT's error message is slightly clearer when a
    non-printing character is used in a format directive.

planned incompatible changes in 0.7.x:
* When the profiling interface settles down, maybe in 0.7.x, maybe
  later, it might impact TRACE. They both encapsulate functions, and
  it's not clear yet how e.g. UNPROFILE will interact with TRACE
  and UNTRACE. (This shouldn't matter, though, unless you are
  using profiling. If you never profile anything, TRACE should
  continue to behave as before.)
* Inlining can now be controlled the ANSI way, without
  MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
  now does what ANSI says it should. The CMU-CL-style 
  SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.